--- a/Analytic_biblio.bib
+++ b/Analytic_biblio.bib
@@ -217,3 +217,69 @@ year = {2016}
   doi = {10.1103/PhysRevA.97.063401},
   url = {https://link.aps.org/doi/10.1103/PhysRevA.97.063401}
 }
+
+@Inbook{Wagner2012,
+author="Wagner, Lucas O.
+and Yang, Zeng-hui
+and Burke, Kieron",
+editor="Marques, Miguel A.L.
+and Maitra, Neepa T.
+and Nogueira, Fernando M.S.
+and Gross, E.K.U.
+and Rubio, Angel",
+title="Exact Conditions and Their Relevance in TDDFT",
+bookTitle="Fundamentals of Time-Dependent Density Functional Theory",
+year="2012",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="101--123",
+abstract="This chapter is devoted to exact conditions in time-dependent density functional theory. Many conditions have been derived for the exact ground-state density functional, and several have played crucial roles in the construction of popular approximations. We believe that the reliability of the most fundamental approximation of any density functional theory, the local density approximation (LDA), is due to the exact conditions that it satisfies. Improved approximations should satisfy at least those conditions that LDA satisfies, plus others. (Which others is part of the art of functional approximation).",
+isbn="978-3-642-23518-4",
+doi="10.1007/978-3-642-23518-4_5",
+url="https://doi.org/10.1007/978-3-642-23518-4_5"
+}
+
+@article{BigDFT,
+author = {Genovese,Luigi  and Neelov,Alexey  and Goedecker,Stefan  and Deutsch,Thierry  and Ghasemi,Seyed Alireza  and Willand,Alexander  and Caliste,Damien  and Zilberberg,Oded  and Rayson,Mark  and Bergman,Anders  and Schneider,Reinhold },
+title = {Daubechies wavelets as a basis set for density functional pseudopotential calculations},
+journal = {The Journal of Chemical Physics},
+volume = {129},
+number = {1},
+pages = {014109},
+year = {2008},
+doi = {10.1063/1.2949547},
+
+URL = { 
+        https://doi.org/10.1063/1.2949547
+    
+},
+eprint = { 
+        https://doi.org/10.1063/1.2949547
+    
+}
+
+}
+
+@article{NLCCPSP,
+author = {Willand,Alex  and Kvashnin,Yaroslav O.  and Genovese,Luigi  and Vázquez-Mayagoitia,Álvaro  and Deb,Arpan Krishna  and Sadeghi,Ali  and Deutsch,Thierry  and Goedecker,Stefan },
+title = {Norm-conserving pseudopotentials with chemical accuracy compared to all-electron calculations},
+journal = {The Journal of Chemical Physics},
+volume = {138},
+number = {10},
+pages = {104109},
+year = {2013},
+doi = {10.1063/1.4793260},
+
+URL = { 
+        https://doi.org/10.1063/1.4793260
+    
+},
+eprint = { 
+        https://doi.org/10.1063/1.4793260
+    
+}
+
+}
+
+
+
