--- a/AnalyticStructure_main.tex
+++ b/AnalyticStructure_main.tex
@@ -776,6 +776,10 @@ the \emph{calibration} of present and future computer codes, thereby increasing 
 The example of the static polarizability of molecules
 presents ideal features as an initial playground. Work is ongoing in this direction.
 
+\begin{acknowledgments}
+We thank Thierry Deutsch for useful comments on the manuscript.
+\end{acknowledgments}
+
 \appendix
 \section{Transverse operators and right action of the Liouvillian superoperator}\lb{LiouvillianAction}
 Given a unperturbed Hamiltonian and density operator, which satisfy $\commutator{\hnot}{\dmnot}=0$, we may decompose a generic operator in two contributions, $\op O=\op O_\parallel + \op O_\perp$, defined as:
