Update on Overleaf.

--- a/AnalyticStructure_main.tex
+++ b/AnalyticStructure_main.tex
@@ -621,7 +621,7 @@ of the excitations, we obtain the following Sternheimer-like equations for the e
 &\left[\Omega_a-(\hnot - \eps_p)\right] \ket{\phi_p^a} = \op Q_0 \op V'[\op E_a] \ket{\psi_p} \;, \nn\\
 &\bra{\chi_p^a}\left[-\Omega_a-(\hnot - \eps_p)\right] = \bra{\psi_p} \op V'[\op E_a] \op Q_0  \;.
 \end{align}
-By writing these equations in a basis set of virtual states we obtain the well-known Casida's eigenvalue equation
+By writing these equations in a basis set of virtual states we obtain the well-known Casida's eigenvalue equation\cite{CasidaBook}
 associated to the excitation energy $\Omega_a$ (see appendix \ref{casida}).
 The spectrum is symmetric w.r.t the inversion of the eigenvalues 
 $\Omega_a \rightarrow -\Omega_a$ and the associated excitation with negative energy are described by the transpose pair $\{\chi^a_p,\phi^a_p\}$.
