Update on Overleaf.

--- a/Analytic_biblio.bib
+++ b/Analytic_biblio.bib
@@ -295,7 +295,7 @@ keywords = "Wavelets, LR-TD-DFT, Absorption spectra, Flugis"
 }
 
 @inbook{CasidaBook,
-author = { MARK E. CASIDA },
+author = { M.E. Casida },
 title = {Time-Dependent Density Functional Response Theory for Molecules},
 booktitle = {Recent Advances in Density Functional Methods},
 chapter = {},
