--- a/AnalyticStructure_main.tex
+++ b/AnalyticStructure_main.tex
@@ -108,9 +108,11 @@
 \begin{abstract}
 By performing a critical analysis of the fundamental equations of linear-response  (LR) formalisms in molecules, 
 we explore the interplay between locality of the response density operator and  numerical convergence of LR-related quantities.
-We show that the first ionization potential of the system behaves as a threshold energy: for frequencies below this value, it is possible to parametrize the response density by employing localized states only. Above this threshold, such a locality property cannot be achieved. 
+%We show that the first ionization potential of the system behaves as a threshold energy: for frequencies below this value, it is possible to parametrize the response density by employing localized states only.
+We show that for frequencies below the first ionization potential (IP) of the system, it is possible to parametrize the response density by employing localized states only.
+Above this threshold energy, such a locality property cannot be achieved. 
 Such considerations may be transposed in terms of the molecule's excited states. We show that not all the system's excitations can be considered on equal footing.
-There is a discrete sector of excitations that can be parametrized by observable, localized states, which can be computationally expressed with high precision, provided an adequate level of completeness. 
+There is a discrete sector of excitations -- which may extend above IP -- that can be parametrized by observable, localized states, which can be computationally expressed with high precision, provided an adequate level of completeness. 
 We present indicators that can help to quantify such potential observable property of an excitation, that can be evaluated 
 in any discretization scheme.  
 The remaining excitation modes belong to a continuum spectrum that, on the contrary, is not directly associated to observable properties and can only be effectively represented in a given computational setup.
