--- a/AnalyticStructure_main.tex
+++ b/AnalyticStructure_main.tex
@@ -85,10 +85,11 @@
 \newcommand{\Liouv}{\sop{\mathcal L}}
 \newcommand{\Liouvnot}{\sop{\mathcal L_0}}
 \newcommand{\coupl}{\sop{\mathcal K}}
-\newcommand{\honetmp}[1][]{\op{H_1}\argument{#1}} 
+\newcommand{\honetmp}[1]{\op{H_1}\argument{#1}} 
 \newcommand{\identity}{\op{\mathbb I}}
 \newcommand{\rmat}[1]{\optr R}
 \newcommand{\fscd}[1]{\ket{f_p^\Phi(\omega)^{#1}}}
+\newcommand{\GH}{\op G_{\op T}}
 
 \captionsetup{justification=centerlast}
 
@@ -106,10 +107,9 @@
 \date{\today}
 
 \begin{abstract}
-By performing a critical analysis of the fundamental equations of linear-response  (LR) formalisms in molecules, 
+By performing a critical analysis of the fundamental equations of linear-response (LR) formalism in molecules, 
 we explore the interplay between locality of the response density operator and  numerical convergence of LR-related quantities.
-%We show that the first ionization potential of the system behaves as a threshold energy: for frequencies below this value, it is possible to parametrize the response density by employing localized states only.
-We show that for frequencies below the first ionization potential (IP) of the system, it is possible to parametrize the response density by employing localized states only.
+We show that for frequencies below the first ionization potential (IP) of the system, it is possible to express the response density by employing localized states only.
 Above this threshold energy, such a locality property cannot be achieved. 
 Such considerations may be transposed in terms of the molecule's excited states. We show that not all the system's excitations can be considered on equal footing.
 There is a discrete sector of excitations -- which may extend above IP -- that can be parametrized by observable, localized states, which can be computationally expressed with high precision, provided an adequate level of completeness. 
@@ -127,7 +127,7 @@ approximations on the scientific outcomes of the simulation.
 \section{Introduction}
 Since the days of their foundations, disciplines like Computational Physics or Quantum Chemistry always had to deal with the problem of the 
 computational reliability of the results. More specifically, a computational result may be considered reliable for various reasons.
-It may be, for example, in agreement with some previous observation or measurement that the employed computational model is susceptible to reproduce.
+For example, it may be in agreement with some previous observation or measurement that the employed computational model is susceptible to reproduce.
 The model itself may in this way be classified as ``accurate''; it can then be employed to extract, \textit{in silico},
 other quantities that might be then used to \emph{predict} or \emph{interpret} experiments.
 Another concept of reliability is the concept of  ``precision'', which is more focused to the actual results
@@ -179,7 +179,7 @@ of the molecule.
 Our considerations will also reveal useful for the understanding of the \emph{analytic structure} of LR quantities like
 the linear susceptibility of the system (i.e. the reducible polarizability).
 We support our considerations with numerical results on simple LR-TDDFT quantities.
-For readability purposes, the details of each calculation are explained in the Appendix.
+For readability purposes, the details of each calculation are explained in Appendix~\ref{compdetails}.
 
 Although we refer, as anticipated, to TDDFT models, such considerations might also be transposed to Many-Body Perturbation Theory
 approaches, in the context of Quasi-Particle equations.
@@ -189,7 +189,7 @@ approaches, in the context of Quasi-Particle equations.
 
 Let us start our discussion by revisiting the impact that the Isolated BC have on the 
 solutions of the time-independent Schr\"odinger Equation.
-We here present well-known concepts of elementary quantum mechanics, under a perspective that
+We here present well-known concepts of quantum mechanics, under a perspective that
 will turn out to be very useful in the forthcoming considerations about linear-response quantities.
 
 Consider a (one-body) wavefunction $\ket{\psi}$ solution of the equation
@@ -198,9 +198,9 @@ a kinetic $\op T$ and a potential $\op V \equiv \op H - \op T$ term.
 In view of analysing the impact of the BC, it is instructive to transform 
 the Schr\"odinger equation in a scattering problem, by writing
 \be\lb{SEHelmholtz1}
-\ket{\psi} = \op G_H(\eps)\ket{\op V\psi}\;,
+\ket{\psi} = \GH(\eps)\ket{\op V\psi}\;,
 \ee
-where we have introduced the Green function of the Helmholtz operator $\op G_H(\eps) = (\eps-\op T)^{-1}$,
+where we have introduced the Green function of the Helmholtz operator $\GH(\eps) = (\eps-\op T)^{-1}$,
 resolvent of the free-particle Hamiltonian $H_s \equiv \op T$.
 
 When describing the Ground State of a molecule, we suppose that the potential operator, even if non-local,
@@ -213,11 +213,11 @@ computational basis sets
 that are tailored to express asymptotically vanishing wavefunctions are better suited for the solution of the problem.
 
 This fact is made apparent by the expression of 
-the kernel of $\op G_H(\eps)$ in the coordinate representation. 
+the kernel of $\GH(\eps)$ in the coordinate representation. 
 When dealing with Isolated BC, it is easy to see that the solution of Eq.~\eqref{SEHelmholtz1}
 can be expressed by:
 \be\lb{HelmholtzKernelDef1}
-\bra{\r} \op G_H(\eps) \ket{\r'} = \frac{1}{4\pi} \begin{cases}
+\bra{\r} \GH(\eps) \ket{\r'} = \frac{1}{4\pi} \begin{cases}
 \frac{e^{-\alpha|\r - \r' |}}{|\r- \r' |} \;,\; & {\textrm for}\; \eps  < 0\; \\ 
 \frac{e^{\ii \alpha |\r-\r' |}}{|\r-\r' |} \;, & {\textrm for} \; \eps \geq 0
 \end{cases} \;,
@@ -302,7 +302,8 @@ An operator $\op O_\perp$ with this feature satisfy the \emph{transverse} condit
 \op O_\perp \equiv 
 \dmnot\op O \op Q_0 + \op Q_0 \op O\dmnot \;,
 \ee
-where $\op Q_0=\identity-\dmnot$ is the projector in the subspace orthogonal to the occupied states of $\hnot$. 
+where $\op Q_0=\identity-\dmnot$ is the projector in empty subspace of $\hnot$
+(for more details see Appendix~\ref{LiouvillianAction}).
 In other terms, the condition $\dm'_\Phi = \dm'_{\Phi\,\perp}$ holds.
 
 We can therefore introduce an explicit representation of the 
@@ -322,11 +323,11 @@ apart from the perturbing field, a further term $\op V'[\dm'_\Phi]$ due to the d
 It is easy to see that the solution of equation \eqref{fluctuationStateEqMotion1} can be casted in the form of
 a set of scattering problems:
 \be\lb{rhoPrimeFluctuationStateDef2}
-\ket{f_p^\Phi(\omega)} = \op G_H(\omega+\epsilon_p)\left(\op V\ket{f_p^\Phi(\omega)} + \ket{s_p^\Phi(\omega)} \right)\;,
+\ket{f_p^\Phi(\omega)} = \GH(\omega+\epsilon_p)\left(\op V\ket{f_p^\Phi(\omega)} + \ket{s_p^\Phi(\omega)} \right)\;,
 \ee
 with the state
 $
-\ket{s_p^\Phi(\omega)} = \op Q_0(\op V'[\dm'_\Phi](\omega) + \op \Phi(\omega))\ket{\psi_p} 
+\ket{s_p^\Phi(\omega)} = \op Q_0(\op \Phi(\omega) +\op V'[\dm'_\Phi](\omega) )\ket{\psi_p} 
 $ as a source term. 
 
 It can be seen that for each choice of $p$, the value $\omega = |\eps_p|$ represents the threshold level 
@@ -369,7 +370,10 @@ By expressing the induced dipole $\braket{\delta \op{\mathbf r}}_{\Phi_s}$ in th
 \ee
 where $\mathbf d^\text{(GS)}$ is the ground state dipole.
 Fig.~\eqref{co_alphaStatic} illustrates this procedure for a $CO$ molecule 
-perturbed by a static electric field. The local character of the fluctuation states at $\omega=0$ is 
+perturbed by a static electric field. 
+Care has been taken in keeping the field strenghts $F_j$ small enough to 
+preseve the validity of the linear response regime.
+The local character of the fluctuation states at $\omega=0$ is 
 probed by verifying the convergence of the statical polarizability versus 
 the size of the computational domain used to express the fluctuation states. The convergence rate is compared with the 
 one of the static dipole of the molecule computed at zero external field. 
@@ -407,6 +411,9 @@ states start behaving as unbound wave functions.
 As by hypothesis $\ket{\op O \psi_p}$ is bound-state like, \emph{only} the scalar products of Eq.~\eqref{LinearResponseFunctDef2} can be evaluated in a localized domain.
 In this case a computational description of fluctuation states is only meaningful in ``weak'' sense,
 where the bound state character of $\{\bra{\psi_p}\op O\}$ behaves as a regulator.
+This is naturally achieved in the above mentioned Krylov space treatments, which
+explicitly deal with the expression of the scalar products. However
+it is important that the underlying basis set is able to express delocalised states.
 
 These considerations prove why, when a given computer code employs established GS numerical techniques, 
 \emph{it is much easier to converge LR quantities for $\omega$ below IP}.
@@ -490,13 +497,13 @@ of the excitations, we obtain the following Sternheimer-like equations for the e
 By writing these equations in a basis set of virtual states we obtain the well-known Casida's eigenvalue equation\cite{CasidaBook}
 associated to the excitation energy $\Omega_a$ (see appendix \ref{casida}).
 The spectrum is symmetric w.r.t the inversion of the eigenvalues 
-$\Omega_a \rightarrow -\Omega_a$ and the associated excitation with negative energy are described by the transpose pair $\{\chi^a_p,\phi^a_p\}$.
+$\Omega_a \rightarrow -\Omega_a$ and the associated excitation with negative energy are described by the transposed pair $\{\chi^a_p,\phi^a_p\}$.
 We concentrate our analysis on the sector of positive energies, i.e. $\Omega_a > 0$.
 
 With the same spirit of the previous sections, we present a formal solution of \eqref{ExcitationOperatorsDef3} as follows 
 \begin{align}
-\ket{\phi^a_p} &= \op G_H(\Omega_a+\eps_p)\left(\op V \ket{\phi^a_p} + \ket{s_p[\op E_a]} \right) \;, \nn \\
-\bra {\chi^a_p} &=\left(\bra{\chi^a_p} \op V  + \bra{s_p[\op E_a]}\right)  \op G_H(-\Omega_a+\eps_p)\;,
+\ket{\phi^a_p} &= \GH(\Omega_a+\eps_p)\left(\op V \ket{\phi^a_p} + \ket{s_p[\op E_a]} \right) \;, \nn \\
+\bra {\chi^a_p} &=\left(\bra{\chi^a_p} \op V  + \bra{s_p[\op E_a]}\right)  \GH(-\Omega_a+\eps_p)\;,
 \end{align}
 where the source terms are here defined as:
 \be
@@ -508,7 +515,7 @@ contains an exponential damping factor for \emph{all} the positive values of $\O
 The asymptotic long-range behavior of $\ket{\chi^a_p}$ thus depends only on the locality properties of 
 $\bra{s_p[\op E_a]}$, which in turn is related to the behavior of the operator $\op V'[\op E_a]$.
 
-On the other hand, the long-range behavior of $\op G_H(\Omega_a+\eps_p)$ depends from 
+On the other hand, the long-range behavior of $\GH(\Omega_a+\eps_p)$ depends from 
 $\Omega_a$, with a threshold of value $\Omega_a=|\eps_p|$. 
 For energies above this value, the behavior of the state $\ket{\phi^a_p}$ is 
 delocalized regardless of the particular nature of the operators $\op V$ and $\op V'$.
@@ -578,9 +585,9 @@ excitations whereas the thick black lines describe delocalized ones belonging a 
 The susceptibility functional has therefore a peculiar analytic structure, that
 is made of multiple threshold energies, one for each of the ionization potentials
 associated to the occupied states. 
-If an excitation $\op E_a$ has a energy $\Omega_a < |\eps_a|$ with $\eps_a = \mathrm{max}\left(\eps_p\right)_{p\in a}$,
+If an excitation $\op E_a$ has an energy $\Omega_a < |\eps_a|$ with $\eps_a = \mathrm{max}\left(\eps_p\right)_{p\in a}$,
 it may belong to a discrete spectrum; otherwise it \emph{has} to belong to a continuum of states. 
-The typical structure of the excitations landscape is depicted in figure \ref{ExcitationLandscape}, once again assuming a reasonable 
+The typical structure of the excitation landscape is depicted in figure \ref{ExcitationLandscape}, once again assuming a reasonable 
 behavior of the perturbed potential $\op V'$.
 Below the first ionization energy $|\eps_h|$ only localized excitations are present. Conversely, in the intermediate energy interval that extends from $|\eps_h|$ to the 
 absolute value of the deepest occupied orbital, other discrete excitations may exist, and are embedded in a continuum of delocalized excitations. 
@@ -591,7 +598,7 @@ regardless of the particular behavior of $\op V'$: the excitation landscape in t
 
 The analysis of the above section reveals that the excitation spectrum is composed by two distinct sectors. 
 The first one is realized by the (finite) set of localized excitations with discrete eigenvalues. 
-Borrowing the terminology introduced in section \ref{SEopenSystem} to the present case, we can affirm that such localized excitations behaves as
+Borrowing the terminology introduced in section \ref{SEopenSystem} to the present case, we can affirm that such localized excitations behave as
 \emph{observable} quantities and the associated energies possess ideal features of reproducibility:
 if the numerical basis employed is complete enough to
 represent the states $\{\phi_p^a,\chi_p^a\}$, the energy $\Omega_a$ 
@@ -599,7 +606,7 @@ converges to its reference value.
 
 The second sector contains a continuum spectrum of delocalized excitations. The associated states $\ket{\phi_p^a}$ behave as the unbound virtual orbitals analyzed in \cite{boffi2016} 
 and are deeply affected by the computational setup used to represent them. In particular, the presence of a finite computational domain implies a fictitious discretization of the excitation levels and 
-the associated spectrum exhibit an explicit dependence from the size of the domain. 
+the associated spectrum exhibits an explicit dependence from the size of the domain. 
 Excitations belonging to this sector thus lose their intrinsic physical meaning and have to be understood simply as
 a representation of the density of states (DOS) of the Liouvillian superoperator.
 
@@ -731,7 +738,7 @@ Below this threshold,
 under reasonable assumptions on the perturbing operators,
 the perturbed density operator is genuinely localized.
 In this localized regime, it is possible to achieve convergence of the numerical result
-by increasing the completeness of the basis with the usual GS rationales.
+by increasing the basis completeness in the same spirit of GS calculations.
 One might expect that more complete basis will give more precise results, regardless of their asymptotic behavior.
 A comparison among various codes in view of reproducibility should therefore be performed 
 initially in this regime.
@@ -745,7 +752,7 @@ appropriate region of space. In view of reproducibility, computational setups wh
 delocalized states seem more interesting in this regime.
 
 Such point of view have also enabled us to shed light on the analytic structure of the 
-linear susceptibility, which is a intrinsic property of the molecule and does not depend on
+linear susceptibility, which is an intrinsic property of the molecule and does not depend on
  the perturbing fields.
  In particular, we have concentrated our interest in its spectral representation in
  terms of ``free oscillation'' (i.e. excitations) of the system.
@@ -874,7 +881,7 @@ where
 This is the well-known Casida Equation in the basis of transitions for the excitation of energy $\Omega_a$. The computational reliability of the 
 eigenvalue $\Omega_a$ depends on the capability of the basis set $\ket{s}$ to fulfill of Eq.~\eqref{phiandchi}. Note that this may be valid only for a subset of the solutions of the eigenproblem \eqref{ExcitationMatrixEq1}.
 
-\section{Computational details}
+\section{Computational details} \lb{compdetails}
 The illustrative calculations presented in this paper are all KS-DFT calculations at the LDA level of theory. We employed the BigDFT code \cite{BigDFT},
 which employs Daubechies Wavelets as computational basis set.
 Such orthonormal basis presents optimal features of in view of reproducibility of the results,
